Modifique el footer

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <!--inicio footer-->
     <footer>
-      Copyright © 2022 - Servicios Legales - Todos los derechos reservados
+      Copyleft © 2022 - Servicios Legales - Todos los derechos reservados
     </footer>
     <!--fin footer-->
   </body>
