actualizacion 21/06, ejercicio de grid

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     />
   </head>
   <!--Inicio Body-->
-  <body>
+  <body id="bodyGrid">
     <!--inicio header-->
-    <header class="header">
+    <header class="header border">
       <h1 class="headerH1"><a href="./index.html">Servicios Legales</a></h1>
       <nav>
         <ul class="headerNavDisplay">
@@ -40,7 +40,7 @@
     <!--fin header-->
 
     <!--inicio main-->
-    <main class="main">
+    <main class="main border">
       <div class="mainDiv1">
         <h2>Materia</h2>
         <ul>
@@ -72,7 +72,7 @@
     </main>
 
     <!--  inicio sidebar -->
-    <aside class="sidebar">
+    <aside class="sidebar border">
       <img src="https://picsum.photos/300/500" alt="foto default" />
     </aside>
     <!-- fin sidebar-->
@@ -80,7 +80,7 @@
     <!--fin main-->
 
     <!--inicio footer-->
-    <footer>
+    <footer class="border">
       Copyleft © 2022 - Servicios Legales - Todos los derechos reservados
     </footer>
     <!--fin footer-->
