--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body id="bodyGrid">
     <!--inicio header-->
     <header class="header border">
-      <h1 class="headerH1"><a href="./index.html">Servicios Legales</a></h1>
+      <h1 class="headerH1"><a href="./index.html">Legal Services</a></h1>
       <nav>
         <ul class="headerNavDisplay">
           <li class="headerNavLi">
