--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Servicios Legales</title>
 
-    <link rel="stylesheet" href="./css/estilo.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,73 +16,76 @@
     />
   </head>
   <!--Inicio Body-->
-  <body id="bodyGrid">
-    <!--inicio header-->
-    <header class="header border">
-      <h1 class="headerH1"><a href="./index.html">Legal Services</a></h1>
-      <nav>
-        <ul class="headerNavDisplay">
-          <li class="headerNavLi">
-            <a href="./pages/pages/penal.html">Penal</a>
-          </li>
-          <li class="headerNavLi">
-            <a href="./pages/pages/contratos.html">Contratos</a>
-          </li>
-          <li class="headerNavLi">
-            <a href="./pages/pages/societario.html">Societario</a>
-          </li>
-          <li class="headerNavLi">
-            <a href="./pages/pages/contacto.html">Contacto</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <!--fin header-->
+  <body>
+    <div class="wrapper">
+      <!--inicio header-->
+      <header class="header">
+        <h1 class="headerH1"><a href="./index.html">Servicios Legales</a></h1>
+        <nav>
+          <ul class="headerNavDisplay ulAnim">
+            <li class="headerNavLi">
+              <a href="./pages/penal.html">Penal</a>
+            </li>
+            <li class="headerNavLi">
+              <a href="./pages/contratos.html">Contratos</a>
+            </li>
+            <li class="headerNavLi">
+              <a href="./pages/societario.html">Societario</a>
+            </li>
+            <li class="headerNavLi">
+              <a href="./pages/contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <!--fin header-->
 
-    <!--inicio main-->
-    <main class="main border">
-      <div class="mainDiv1">
-        <h2>Materia</h2>
-        <ul>
-          <li><a href="./pages/pages/penal.html">Penal</a></li>
-          <li><a href="./pages/pages/contratos.html">Contratos</a></li>
-          <li><a href="./pages/pages/societario.html">Societario</a></li>
-        </ul>
-      </div>
+      <!--inicio main-->
+      <main class="mainInic">
+        <h2 class="title">Inicio</h2>
+        <div class="mainDiv1 divAnim">
+          <h2>Materia</h2>
+          <ul>
+            <li><a href="./pages/pages/penal.html">Penal</a></li>
+            <li><a href="./pages/pages/contratos.html">Contratos</a></li>
+            <li><a href="./pages/pages/societario.html">Societario</a></li>
+          </ul>
+        </div>
 
-      <div class="mainDiv2">
-        <h2>Mas Buscados</h2>
-        <ul>
-          <li>CD Despido</li>
-          <li>Locacion</li>
-          <li>Estatuto SAU</li>
-        </ul>
-      </div>
+        <div class="mainDiv2 divAnim">
+          <h2>Mas Buscados</h2>
+          <ul>
+            <li>CD Despido</li>
+            <li>Locacion</li>
+            <li>Estatuto SAU</li>
+          </ul>
+        </div>
 
-      <!--Inicio Contacto-->
-      <div class="mainContacto">
-        <h3 class="mainContactoH3">Contacto</h3>
-        <ul class="mainContactoUl">
-          <li>Email</li>
-          <li>Lknd/legalService</li>
-          <li>9999 9999999</li>
-        </ul>
-      </div>
-      <!--Fin Contacto-->
-    </main>
+        <!--Inicio Contacto-->
+        <div class="mainContacto divAnim">
+          <h3 class="mainContactoH3">Contacto</h3>
+          <ul class="mainContactoUl">
+            <li>Email</li>
+            <li>Lknd/legalService</li>
+            <li>9999 9999999</li>
+          </ul>
+        </div>
+        <!--Fin Contacto-->
+      </main>
 
-    <!--  inicio sidebar -->
-    <aside class="sidebar border">
-      <img src="https://picsum.photos/300/500" alt="foto default" />
-    </aside>
-    <!-- fin sidebar-->
+      <!--  inicio sidebar -->
+      <aside class="sidebar">
+        <img src="https://picsum.photos/300/500" alt="foto default" />
+      </aside>
+      <!-- fin sidebar-->
 
-    <!--fin main-->
+      <!--fin main-->
 
-    <!--inicio footer-->
-    <footer class="border">
-      Copyleft © 2022 - Servicios Legales - Todos los derechos reservados
-    </footer>
+      <!--inicio footer-->
+      <footer>
+        Copyright © 2022 - Servicios Legales - Todos los derechos reservados
+      </footer>
+    </div>
     <!--fin footer-->
   </body>
   <!--Fin Body-->
